<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/rounded_tertiary_bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/course_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_secondary_background"
                android:backgroundTint="@color/opacity_50"
                android:drawablePadding="4dp"
                android:elegantTextHeight="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/course_rating"
                android:textAlignment="textEnd"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/course_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/course_rating"
                android:background="@drawable/rounded_secondary_background"
                android:backgroundTint="@color/opacity_50"
                android:elegantTextHeight="true"
                android:paddingHorizontal="8dp"
                android:text="@string/course_start_date" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_secondary_background"
                android:backgroundTint="@color/opacity_50"
                android:contentDescription="@string/bottom_nav_favorite"
                app:srcCompat="@drawable/ic_favorite" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/course_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="4dp"
        android:elegantTextHeight="true"
        android:text="@string/course_more"
        android:textAlignment="gravity"
        android:textColor="@color/clickable"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/course_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/course_price"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_title"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <!-- Не совсем понимаю, как тут сделать нормальную высоту. -->
    <!-- Разве что только привязывать цену и "подробнее" к описанию...-->
    <TextView
        android:id="@+id/course_desc_short"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:alpha="0.7"
        android:text="@string/course_desc_short"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_title" />


</androidx.constraintlayout.widget.ConstraintLayout>